now succesfully able to go to next page with enter key and onClick

--- a/.hintrc
+++ b/.hintrc
@@ -11,6 +11,7 @@
         "image-alt": "off"
       }
     ],
-    "axe/language": "off"
+    "axe/language": "off",
+    "axe/name-role-value": "off"
   }
 }
